# plantonomy-nano

./: .gitignore  README.md  i2c_demo.cpp  main.cpp  plantonomy.cbp  plantonomy.depend  plantonomy.layout
include/: Connection.h  DeviceDriver.h  I2CComm.h  Plant.h  PlantManager.h
include/plantonomy/: ADS1115.h  udpServer.h
source/: CMakeLists.txt  main.cpp
source/comm/: CMakeLists.txt  CommunicationProtocol.cpp  CommunicationProtocol.h  I2C.cpp  I2C.h
source/devices/: CMakeLists.txt  Device.cpp  Device.h
src/: PlantManager.cpp  main.cpp  udpServer.cpp
src/comm/: Connection.cpp  I2CComm.cpp
src/modules/: ADS1115.cpp  DeviceDriver.cpp
